fixes #166