@@ -375,12 +375,11 @@
 			</plugin>
 			<!-- Unit tests -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.8</version>
 				<configuration>
 					<!--forkMode>pertest</forkMode -->
-					<argLine>-Xms256m -Xmx512m</argLine>
+					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
 					<excludes>
 						<!--exclude>**/util/**/*.java</exclude -->
 						<exclude>**/modules/MaryModuleTestCase.java</exclude>
